# RuYou-test-project-Stanislav-Bobovych

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
color_palettes/color_palettes/: settings.py  urls.py
color_palettes/colors/: filtersets.py  models.py  serializers.py  urls.py  views.py
color_palettes/colors/migrations/: 0001_initial.py
color_palettes/colors/services/: color_API_integration.py
color_palettes/colors/tests/: test_color_CRUD.py
color_palettes/palettes/: models.py  serializers.py  urls.py  views.py
color_palettes/palettes/migrations/: 0001_initial.py
color_palettes/palettes/tests/: test_palette_CRUD.py
color_palettes/user/: models.py  serializers.py  urls.py  views.py
color_palettes/user/migrations/: 0001_initial.py
color_palettes/user/services/: login.py
color_palettes/user/tests/: test_auth.py
